# margemliquida-market-data

./: .readthedocs.yaml  LICENSE  README.md  bdrs-nao-patrocinados.csv  http_cache.sqlite  mkdocs.yml  pyproject.toml
.github/workflows/: codcov.yml  codecov.yml  python-app.yml  snyk-security.yml
docs/: index.md
docs/api/: anbima.md  b3.md  bcb.md  carteira_global.md  fundamentus.md  fundsexplorer.md  ibge.md  meu_fundamentus.md  nasdaq.md  tesouro.md  tesouro_transparente.md  yfinance.md
docs/stylesheets/: extra.css
margemliquida_market_data/: teste_gustavo_correa.py  teste_gustavo_correa2.py
margemliquida_market_data/b3/: b3.py  bdrs.py  etfs.py  listas.py
margemliquida_market_data/carteira_global/: carteira_global.py
margemliquida_market_data/fundsexplorer/: fundsexplorer.py
margemliquida_market_data/maisretorno/: bdrs.py  lista_bdrs.py  teste.py
margemliquida_market_data/meu_fundamentus/: meu_fundamentus.py  utils.py
margemliquida_market_data/selenium_config/: meu_firefox.py
margemliquida_market_data/tesouro_transparente/: tesouro_transparente.py
src/b3/: b3.py
src/fundsexplorer/: fundsexplorer.py
src/meu_fundamentus/: meu_fundamentus.py
tests/: test_fundsexplorer.py  test_meus_fundamentus.py  test_tesouro_transparente.py
