[tool.poetry]
name = "margemliquida-market-data"
version = "0.1.0"
description = "Utilitários para obtenção de dados do mercado"
authors = ["Pablo Souza Grigoletti <psgrigoletti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.33"
python-bcb = "^0.2.0"
sidrapy = "^0.1.4"
fundamentus = "^0.2.0"
pip = "^23.3.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
selenium = "^4.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.11.4"
taskipy = "^1.10.3"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "9.5.4"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "1.8.0"
mkdocs-macros-plugin = "1.0.5"
jinja2 = "3.1.3"

[tool.poetry.urls]
"Documentação" = "https://margemliquida-market-data.readthedocs.io/pt/latest/"
"Código" = "https://github.com/psgrigoletti/margemliquida-market-data"
"Bug Tracker" = "https://github.com/psgrigoletti/margemliquida-market-data/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=margemliquida-market-data -vv"
post_test = "coverage html"
# publish = "poetry publish -u __token__ -p $NOTAS_MUSICAIS_TOKEN"
